infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: viethung512/tts_auth
          # image: us.gcr.io/vbee-tts-297514/auth
      hostAliases:
        - ip: '192.168.49.2'
          # - ip: '34.72.14.53'
          hostnames:
            - 'vbee-training-tools.dev'
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
