infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          # image: us.gcr.io/vbee-tts-297514/client
          image: viethung512/tts_client
      hostAliases:
        # - ip: '34.72.14.53'
        - ip: '192.168.49.2'
          hostnames:
            - 'vbee-training-tools.dev'
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
