infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/add-base-url: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 'tts-api.hung97.com'
      http:
        paths:
          # auth service
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 4000
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 4000
          - path: /api/roles/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 4000

          # data service
          - path: /api/broadcaster/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 4000
          - path: /api/sentences/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 4000
          - path: /api/records/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 4000
          - path: /api/voices/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 4000
          - path: /api/allophone/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 4000

          # static service
          # - path: /api/static/?(.*)
          #   backend:
          #     serviceName: static-srv
          #     servicePort: 3000
          # - path: /static/resource/?(.*)
          #   backend:
          #     serviceName: static-srv
          #     servicePort: 3000
          # - path: /static/data/?(.*)
          #   backend:
          #     serviceName: data-srv
          #     servicePort: 3000

          # client
          # - path: /?(.*)
          #   backend:
          #     serviceName: client-srv
          #     servicePort: 3000
